// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentLeftNav render assessments: with status FAIL 1`] = `
"<div>
  Overview
  <div>
    <StatusIcon status={[undefined]} className=\\"dark-gray\\" />
  </div>
  <OverviewLeftNavLink link={{...}} renderIcon={[Function: renderAssessmentIcon]} />
  assessment 1
  <div>
    <StatusIcon status={2} className=\\"dark-gray\\" />
  </div>
  <TestViewLeftNavLink link={{...}} renderIcon={[Function: renderAssessmentIcon]} />
  assessment 2
  <div>
    <StatusIcon status={0} className=\\"dark-gray\\" />
  </div>
  <TestViewLeftNavLink link={{...}} renderIcon={[Function: renderAssessmentIcon]} />
</div>"
`;

exports[`AssessmentLeftNav render assessments: with status PASS 1`] = `
"<div>
  Overview
  <div>
    <StatusIcon status={[undefined]} className=\\"dark-gray\\" />
  </div>
  <OverviewLeftNavLink link={{...}} renderIcon={[Function: renderAssessmentIcon]} />
  assessment 1
  <div>
    <StatusIcon status={0} className=\\"dark-gray\\" />
  </div>
  <TestViewLeftNavLink link={{...}} renderIcon={[Function: renderAssessmentIcon]} />
  assessment 2
  <div>
    <StatusIcon status={0} className=\\"dark-gray\\" />
  </div>
  <TestViewLeftNavLink link={{...}} renderIcon={[Function: renderAssessmentIcon]} />
</div>"
`;

exports[`AssessmentLeftNav render assessments: with status UNKNOWN 1`] = `
"<div>
  Overview
  <div>
    <StatusIcon status={[undefined]} className=\\"dark-gray\\" />
  </div>
  <OverviewLeftNavLink link={{...}} renderIcon={[Function: renderAssessmentIcon]} />
  assessment 1
  <div className=\\"index-circle\\">
    1
  </div>
  <TestViewLeftNavLink link={{...}} renderIcon={[Function: renderAssessmentIcon]} />
  assessment 2
  <div>
    <StatusIcon status={0} className=\\"dark-gray\\" />
  </div>
  <TestViewLeftNavLink link={{...}} renderIcon={[Function: renderAssessmentIcon]} />
</div>"
`;

exports[`AssessmentLeftNav render fast pass 1`] = `
"<div>
  fake key
  test title
  <div className=\\"index-circle\\">
    1
  </div>
</div>"
`;
